# OrganizationManager

./: Dockerfile  README.md  alembic.ini  organization_manager.db  pyproject.toml
alembic/: env.py
alembic/versions/: bbbabe9d3c80_initial_migration.py  f2cc6407587d_initial_migration.py
organization_manager/: exceptions.py  main.py
organization_manager/api/v1/endpoints/: admin.py  organization.py
organization_manager/core/: config.py
organization_manager/db/: database.py
organization_manager/db/models/: __init__.py  base.py  organization.py  user.py
organization_manager/db/repos/: organization.py  organization_database_repo.py  organization_repo.py  user.py  user_repo.py
organization_manager/db/schemas/: auth_types.py  dynamic_database_types.py  organization_database_types.py  organization_types.py  user_types.py
organization_manager/schemas/: auth.py  organization.py  organization_database.py  user.py
organization_manager/services/: auth_service.py  create_database_service.py  dynamic_database_service.py  organization_admin_service.py  organization_database_service.py  organization_service.py
organization_manager/utils/: custom_logger.py  hash_password.py
tests/organization_manager/api/v1/endpoints/: base.py  test_admin.py  test_organization.py
